--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
             <li class="mb-2 pl-4 position-relative">
                 <i class="resume-award-icon fa-newspaper fas position-absolute" data-fa-transform="shrink-2"></i>
-                <div class="resume-award-name"><a href="media/diplomas/Jenniffer Mishell Baque Moreno - Con. interno de desarrollo de Software.pdf"> Concurso interno de desarrollo de Software</a>, FALCON TEAM - ESPOCH 2022</div>
+                <div class="resume-award-name"><a href="media/diplomas/Jenniffer Mishell Baque Moreno - Concurso interno.pdf"> Concurso interno de desarrollo de Software</a>, FALCON TEAM - ESPOCH 2022</div>
 
                 <div class="resume-award-desc"></div>
             </li>
