--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div class="resume-wrapper-inner mx-auto text-left bg-white shadow-lg">
         <header class="resume-header pt-4 pt-md-0">
         <div class="media flex-column flex-md-row">
-        <img class="mr-3 img-fluid picture mx-auto" style="width: 16.5%;height: auto;" src="assets/images/profile.jpeg"  alt=>
+        <img class="mr-3 img-fluid picture mx-auto" style="width: 16.5%;height: auto;" src="assets/images/profile.jpg"  alt=>
             <div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
                 <div class="primary-info">
                     <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Jenniffer Baque</h1>
@@ -79,7 +79,7 @@
             Me desempeño como Programadora Jr. con experiencia en desarrollo web front-end donde utilizo tecnologías como HTML, CSS, JavaScript junto con React y Bootstrap. 
             En el back-end, manejo Python, Node.js, PHP, Java y C# y cuento con conocimientos en arquitecturas de bases de datos SQL,
             he colaborado con equipos pequeños en proyectos académicos y personales de desarrollo de software utilizando metodologías ágiles como Scrum y Kanban, 
-            mi objetivo es continuar mi aprendizaje y perfeccionar mis habilidades, enfocándome en herramientas y tecnologías más avanzadas del desarrollo de software.
+            mi objetivo es continuar mi aprendizaje y perfeccionar mis habilidades.
         </p> 
     </div>
 </section>
@@ -227,21 +227,21 @@
                     <li class="mb-2">
                         <div class="resume-skill-name">HTML/CSS/JS</div>
                         <div class="progress resume-progress">
-                            <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </li>
 
                     <li class="mb-2">
                         <div class="resume-skill-name">Bootstrap</div>
                         <div class="progress resume-progress">
-                            <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </li>
 
                     <li class="mb-2">
                         <div class="resume-skill-name">React</div>
                         <div class="progress resume-progress">
-                            <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </li>
 
@@ -255,21 +255,21 @@
                     <li class="mb-2">
                         <div class="resume-skill-name">Microsoft SQL Server</div>
                         <div class="progress resume-progress">
-                            <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </li>
 
                     <li class="mb-2">
                         <div class="resume-skill-name">Postgres</div>
                         <div class="progress resume-progress">
-                            <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 87%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </li>
 
                     <li class="mb-2">
                         <div class="resume-skill-name">Sqlite</div>
                         <div class="progress resume-progress">
-                            <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 82%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 55%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </li>
 
