--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                    <!-- <div class="title mb-3">Computer Security <a href="https://www.seguridad.unam.mx/becarios"> CERT UNAM </a></div>-->
                     <ul class="list-unstyled">
 
-                    <li><i class="fa fa-envelope" data-fa-transform="    grow-3"></i> jennifferbaque2@gmail.com</li>
+                    <li><i class="fa fa-envelope" data-fa-transform="    grow-3"></i> baquejenniffer@hotmail.com</li>
                     <li><a href="https://t.me/jennifferbaque"><i class="fa fa-telegram" aria-hidden="true"></i> Contáctame</li></a>
 
                     </ul>
