--- a/index.html
+++ b/index.html
@@ -332,6 +332,13 @@
                 <div class="resume-award-desc"></div>
             </li>
 
+            <li class="mb-2 pl-4 position-relative">
+                <i class="resume-award-icon fa-newspaper fas position-absolute" data-fa-transform="shrink-2"></i>
+                <div class="resume-award-name"><a href="media/diplomas/Jenniffer Mishell Baque Moreno - GetStartedwithAPIGatewaySkillBadge.pdf"> Get Started with API Gateway Skill Badge </a>, Google Cloud 2025</div>
+
+                <div class="resume-award-desc"></div>
+            </li>
+
             <h3 class="resume-position-title font-weight-bold mb-1">Talleres</h3>
 
             <li class="mb-2 pl-4 position-relative">
